fixed up styles and added enums for better readability

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,10 +1,50 @@
 .button-container {
+  padding-top: 16px;
+
+  &.default {
+    .button-styles {
+      height: 63px;
+      font-size: 0.9rem;
+      width: 166px;
+    }
+  }
+
+  &.large-font-style {
+    .button-styles {
+      font-size: 1.3rem;
+      height: 71px;
+      width: 223px;
+    }
+  }
+
+  &.large-button {
+    .button-styles {
+      height: 71px;
+      width: 223px;
+    }
+  }
+
+  &.small-button {
+    .button-styles {
+      width: 87px;
+      height: 31px;
+      font-size: 0.7rem;
+    }
+  }
+
+  &.medium-button {
+    .button-styles {
+      width: 166px;
+      height: 40px;
+      font-size: 1.3rem;
+    }
+  }
+
   .button-styles {
-    background-color: #FF6B35;
-    height: 63px;
-    width: 166px;
+    background-color: #ff6b35;
     border-radius: 30px;
-    color: #1A659E;
+    color: #1a659e;
+    height: 63px;
     font-size: 0.9rem;
   }
 }
